<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="16dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="20dp"
    card_view:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_movieImage"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_margin="10dip"
            android:contentDescription="@string/movie_image"
            android:scaleType="fitCenter"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/iv_movieImage"
            card_view:layout_constraintTop_toTopOf="@+id/iv_movieImage" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="257dp"
            android:layout_height="39dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:lines="2"
            android:text="@string/desc"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/iv_movieImage" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/rating_image"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_desc"
            card_view:layout_constraintStart_toEndOf="@+id/iv_movieImage"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title"
            card_view:srcCompat="@drawable/ic_baseline_star_24"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rating"
            android:textSize="17sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/imageView4"
            card_view:layout_constraintTop_toTopOf="@+id/imageView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>